fixed overflow (off-canvas menu)

--- a/style.css
+++ b/style.css
@@ -407,7 +407,9 @@ footer span {
 	justify-content: center;
 }
 
-
+.overflow-active {
+	overflow:hidden;
+}
 
 
 @media screen and (max-width: 1400px) {
